# Clang-Cpp-Testbook

./: README.md  gitshell
DataBase/: CMakeLists.txt  README.md
DataBase/src/clanguage/: AppendsData.c  CreateDB.c  DeleteDB.c  DisplayDB.c  DisplayPointsRecord.c  HelpDoc.c  LocateDB.c  OpenDB.c  SwitchMethod.c  change-db.ccc  closedb.ccc  mainc.ccc  px-dbms.ccc  sortdb.ccc
DataBase/src/head/: Methods.h  header.h
LinkedList/: CMakeLists.txt  README.md  main.c
LinkedList/src/main/clang/: AmendElem.c  DeleteElem.c  Display.c  InitLink.c  InsertElem.c  SelectElem.c
LinkedList/src/main/declare/: Declare.h
ResearchExample/: CMakeLists.txt  main.c
ResearchExample/src/main/clang/: get_scan_str.c  get_string.c  pointer_case.c  sequence_table.c  single_direction.c  single_direction_1.c  word_counts.c
ResearchExample/src/main/clang/double-direction/: demonstrate.c
ResearchExample/src/main/clang/single-direction-link-list/: single_dire_list.c  single_direction.c  single_direction_1.c  single_list_demo.c
ResearchExample/src/main/header/: declaration.h
StudentDataBase/: CMakeLists.txt  README.md  main.c
StudentDataBase/src/clang/main/control/: CheckOrder.c  MainWindow.c
StudentDataBase/src/clang/main/create/: AddStudent.c  CreateStud.c  FreshData.c
StudentDataBase/src/clang/main/delete/: DeleteStud.c
StudentDataBase/src/clang/main/retrive/: ExhibitStud.c
StudentDataBase/src/clang/main/rw/: ReadData.c  WriteData.c
StudentDataBase/src/clang/main/update/: UpdateStud.c
StudentDataBase/src/declare/: Declare.h
TeleList/: CMakeLists.txt  README.md  functions.h  main.c
TeleList/deposit/c-dir/processing/: middle.c
TeleList/deposit/c-dir/util/: api.c
TeleList/deposit/head-dir/: link_man.h
TeleList/src/c-dir/processing/: middle.c
TeleList/src/clang/main/: middle.c
TeleList/src/clang/util/: api.c
TeleList/src/heads/: functions.h  link_man.h
data-structure/: CMakeLists.txt  README.md  main.c
data-structure/src/main/clang/graph/: graph_adj_matrix.c  graph_adjacent_list.c  graph_adjacent_matrix.c  graph_adjacent_matrix1.c  graph_tbl_1.c  matrix_example.c  matrix_type.c
data-structure/src/main/clang/linear-table/double-direction/: demonstrate.c
data-structure/src/main/clang/linear-table/practise/: del_duplicate_ele.c  del_repeat_s_d.c  find_from_bottom.c  find_middle_node_s_d.c  merge_seq.c  merge_single_direction.c  reverse_single_direction.c
data-structure/src/main/clang/linear-table/sequence/: sequence_table.c
data-structure/src/main/clang/linear-table/single-direction/: single_direction.c
data-structure/src/main/clang/linear-table/sinle-direction/: single_dire_list.c  single_direction_1.c  single_list_demo.c
data-structure/src/main/clang/matrix-array/: snake_matrix.c
data-structure/src/main/clang/stack-queue/double-direction-queue/: case.c
data-structure/src/main/clang/stack-queue/practice/: decimal_conversion_binary.c  determine_palindrome.c
data-structure/src/main/clang/stack-queue/queue/: circulate_queue.c  circulate_queue2.c  link_queue.c
data-structure/src/main/clang/stack-queue/stack/: linked_stack.c  sequence_stack.c  sequence_stack2.c
data-structure/src/main/clang/string/: brute_force_algorithm.c
data-structure/src/main/clang/tree/: binary_tree_case.c  binary_tree_example.c  str_to_tree.c
data-structure/src/main/header/: exports_declaration.h
data-structure/src/main/header/base/: base.h
data-structure/src/main/header/graph/: graph_index.h
data-structure/src/main/header/linear-tbl/: linear_declaration.h
data-structure/src/main/header/matrix-array/: index.h  matrix_index.h
data-structure/src/main/header/stack-queue/: stack_queue_decl.h
data-structure/src/main/header/string-practise/: index.h
data-structure/src/main/header/tree-header/: tree_index.h
link-list-demo/: CMakeLists.txt  README.md  main.c
link-list-demo/src/main/clang/: create.c  create_case.c  delete.c  find.c  find_case.c  insert.c  traversal.c
link-list-demo/src/main/declare/: declare.h
socket-cilent/: CMakeLists.txt  README.md  main.c
socket-cilent/src/main/clang/: api.c
socket-cilent/src/main/declare/: DeclareLib.h
web-server-project/: CMakeLists.txt  README.md  main.c
web-server-project/src/main/clang/: get_time.c  http_session.c  init_socket.c  web_server.c
web-server-project/src/main/head/: get_time.h  http_session.h  init_socket.h  total_declaration.h
